@@ -6,6 +6,11 @@
 	  the comments of the aforementioned bug report (avatar making a bed that an
 	  NPC took right after the avatar woke up). Improved bed occupancy detection
 	  routine allows children to be detected too.
+	Rev 7263:
+	* actors.cc, schedule.cc: Actor::unready_weapon causes actor to redraw if a
+	  weapon has been unreadied. Forcibly remove the weapon from hand if not a
+	  party NPC and belt slot is being used. Places where Actor::unready_weapon
+	  were called together with Game_object::add_dirty see the latter removed.
 
 2013-01-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* actions.cc: Fixed Fawn guards sometimes not being able to open doors.
